--- a/frontend/moody-tunes/package.json
+++ b/frontend/moody-tunes/package.json
@@ -3,13 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "3": "^2.1.0",
+    "-": "0.0.1",
+    "@apollo/client": "^3.1.3",
+    "@babel/runtime": "^7.10.4",
+    "apollo-client": "^2.6.10",
+    "apollo-link-error": "^1.1.13",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "graphql": "^15.3.0",
+    "jquery": "^3.5.1",
+    "path-to-regexp": "^6.1.0",
+    "popper.js": "^1.16.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
+    "react-bootstrap": "1.0.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "react-transition-group": "^1.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.5",
+    "subscriptions-transport-ws": "^0.9.17",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
