--- a/frontend/moody-tunes/package.json
+++ b/frontend/moody-tunes/package.json
@@ -15,9 +15,11 @@
     "jquery": "^3.5.1",
     "path-to-regexp": "^6.1.0",
     "popper.js": "^1.16.1",
+    "react": "^16.13.1",
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "1.0.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -27,8 +29,11 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
+    "style-loader": "^1.2.1",
     "subscriptions-transport-ws": "^0.9.17",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "url-loader": "^4.1.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "start": "react-scripts start",
